--- a/app/angular.json
+++ b/app/angular.json
@@ -40,12 +40,18 @@
               "./node_modules/font-awesome/css/font-awesome.min.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.scss",
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
           },
           "configurations": {
             "production": {
+               "fileReplacements": [
+                {
+                "replace": "src/environments/environment.ts",
+                "with": "src/environments/environment.prod.ts"
+                }],
               "budgets": [
                 {
                   "type": "initial",
