--- a/app/angular.json
+++ b/app/angular.json
@@ -38,8 +38,10 @@
             ],
             "styles": [
               "./node_modules/font-awesome/css/font-awesome.min.css",
+              "./node_modules/ngx-spinner/animations/ball-scale-multiple.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.scss",
+              "./node_modules/bootswatch/dist/united/bootstrap.min.css",
               "src/styles.scss",
               "node_modules/ngx-toastr/toastr.css"
             ],
